--- a/src/Infrastructure/RackOfLabs.Infrastructure.Persistence/RackOfLabs.Infrastructure.Persistence.csproj
+++ b/src/Infrastructure/RackOfLabs.Infrastructure.Persistence/RackOfLabs.Infrastructure.Persistence.csproj
@@ -16,7 +16,10 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.1" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.1" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="6.0.1" />
     </ItemGroup>
 
 </Project>
